maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:12: error: ';' expected but '=' found.
override def run() {while (getY()!=0) {c = 0;b=false;setDirection(Direction.NORTH);while (!estFaceMur()) {avance()};while (getY() !=0 && (c!=0||!b)) {(c,b)=garM(c,b)}};while (!estSurBiscuit()) {(c,b)=garM(c,b)};prendBiscuit()} 
                                                                                                                                                           ^Escaper:12: error: ';' expected but '=' found.
override def run() {while (getY()!=0) {c = 0;b=false;setDirection(Direction.NORTH);while (!estFaceMur()) {avance()};while (getY() !=0 && (c!=0||!b)) {(c,b)=garM(c,b)}};while (!estSurBiscuit()) {(c,b)=garM(c,b)};prendBiscuit()} 
                                                                                                                                                                                                       ^